--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -7,7 +7,33 @@
 {% endblock %}
 
 {% block body %}
+    <div class="container">
+        <div class="row">
+            <div class="col-12 mt-5">
+                <button type="button" id="toggleForm" class="btn btn-info">{% trans %}add_test_data{% endtrans %}</button>
+            </div>
+            <div id="addData" class="col-12 mt-3">
+                <form>
+                    <div class="form-group">
+                        <label for="json">{% trans %}formed_json{% endtrans %}</label>
+                        <textarea class="form-control" id="json" rows="3"></textarea>
+                    </div>
+                    <button type="button" class="btn btn-primary mb-2">{% trans %}send_data{% endtrans %}</button>
+                </form>
+            </div>
+            <div id="loadingFrame" class="col-12 d-none justify-content-center">
+                <div class="loading"></div>
+            </div>
+        </div>
+    </div>
 
+
+
+    <div class="container">
+        <div class="row">
+            <h1></h1>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
