--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -18,6 +18,7 @@
 
             <div class="col-12 mt-5">
                 <button type="button" id="toggleForm" class="btn btn-info">{% trans %}add_test_data{% endtrans %}</button>
+                <button type="button" id="toggleFormMatch" class="btn btn-info">{% trans %}update_match{% endtrans %}</button>
             </div>
             <div id="addData" class="col-12 mt-3">
                 <form>
@@ -28,13 +29,21 @@
                     <button id="sendData" type="button" class="btn btn-primary mb-2">{% trans %}send_data{% endtrans %}</button>
                 </form>
             </div>
+            <div id="addDataMatch" class="col-12 mt-3">
+                <form>
+                    <div class="form-group">
+                        <label for="jsonMatch">{% trans %}formed_match_json{% endtrans %}</label>
+                        <textarea class="form-control" id="jsonMatch" rows="3"></textarea>
+                    </div>
+                    <button id="sendDataMatch" type="button" class="btn btn-primary mb-2">{% trans %}send_data{% endtrans %}</button>
+                </form>
+            </div>
+
             <div id="loadingFrame" class="col-12 d-none justify-content-center">
                 <div class="loading"></div>
             </div>
         </div>
     </div>
-
-
 
     <div class="container">
         <div class="row">
